deploy/k8s/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: postern
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postern
  namespace: postern
spec:
  replicas: 2
  selector:
    matchLabels: {app: postern}
  template:
    metadata:
      labels: {app: postern}
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile: {type: RuntimeDefault}
      containers:
        - name: postern
          image: ghcr.io/rgreposito/postern:0.1.0
          args: ["-policy", "/policy/prod.yaml"]
          ports:
            - containerPort: 8443
          volumeMounts:
            - name: policy
              mountPath: /policy
              readOnly: true
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities: {drop: ["ALL"]}
          readinessProbe:
            httpGet: {path: /healthz, port: 8443}
            periodSeconds: 5
          resources:
            requests: {cpu: 50m, memory: 64Mi}
            limits: {cpu: 500m, memory: 256Mi}
      volumes:
        - name: policy
          configMap: {name: postern-policy}
---
apiVersion: v1
kind: Service
metadata:
  name: postern
  namespace: postern
spec:
  selector: {app: postern}
  ports:
    - name: http
      port: 8443
      targetPort: 8443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postern-ingress
  namespace: postern
spec:
  podSelector: {matchLabels: {app: postern}}
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - podSelector: {matchLabels: {role: ingress}}
      ports:
        - protocol: TCP
          port: 8443
  egress:
    - {} # DNS + later KMS. tighten this.
